libraries/ckit/regression/valid-programs/a11.c
main () {
  int *i, *j;
  i != 0;
  i > j;
  i >= j;
  i < j+1;
}
