libraries/ckit/regression/invalid-programs/r11.c
main () {
  int *i, *j;
  i != 0;
  i > 0;
  i >= 0;
}
